--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           <!-- <iframe src="./static/images/overview.pdf" width="600" height="400"></iframe> -->
             <img src="./static/images/overview.png" alt="overview" width="12000" height="600">
             <p>
-              2DGS-Room improves 2DGS to achieve high-fidelity geometric reconstruction for indoor scenes. 
+              **Overview of 2DGS-Room.** Given multi-view posed images, we improve 2DGS to achieve high-fidelity geometric reconstruction for indoor scenes.
               (a) Starting from an SfM-derived point cloud, we generate a set of seed points through voxelization, establishing a stable foundation for guiding the distribution and density of 2D Gaussians. 
               We further introduce an adaptive growth and pruning strategy to optimize seed points. 
               (b) We incorporate depth and normal priors, addressing the challenges of detailed areas and textureless regions. 
