--- a/index.html
+++ b/index.html
@@ -246,37 +246,37 @@
     <div class="video-container">
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-gs-0050">
-          <video poster="" id="gs-0050" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="gs-0050" autoplay controls muted loop playsinline width="8000">
             <source src="./static/videos/reconstruction_results/gs-0050.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-gs-0085">
-          <video poster="" id="gs-0085" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="gs-0085" autoplay controls muted loop playsinline width="8000">
             <source src="./static/videos/reconstruction_results/gs-0085.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-gs-0580">
-          <video poster="" id="gs-0580" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="gs-0580" autoplay controls muted loop playsinline width="8000">
             <source src="./static/videos/reconstruction_results/gs-0580.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-gs-0616">
-          <video poster="" id="gs-0616" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="gs-0616" autoplay controls muted loop playsinline width="8000">
             <source src="./static/videos/reconstruction_results/gs-0616.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-gs-8b">
-          <video poster="" id="gs-8b" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="gs-8b" autoplay controls muted loop playsinline width="8000">
             <source src="./static/videos/reconstruction_results/gs-8b.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-gs-8d">
-          <video poster="" id="gs-8d" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="gs-8d" autoplay controls muted loop playsinline width="8000">
             <source src="./static/videos/reconstruction_results/gs-8d.mp4"
                     type="video/mp4">
           </video>
