--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <p>
             The reconstruction of indoor scenes remains challenging due to the inherent complexity of spatial structures and the prevalence of textureless regions. 
             Recent advancements in 3D Gaussian Splatting have improved novel view synthesis with accelerated processing but have yet to deliver comparable performance in surface reconstruction. 
-            In this paper, we introduce \textbf{2DGS-Room}, a novel method leveraging 2D Gaussian Splatting for high-fidelity indoor scene reconstruction. 
+            In this paper, we introduce <strong>2DGS-Room</strong>, a novel method leveraging 2D Gaussian Splatting for high-fidelity indoor scene reconstruction. 
             Specifically, we employ a seed-guided mechanism to control the distribution of 2D Gaussians, with the density of seed points dynamically optimized through adaptive growth and pruning mechanisms. 
             To further improve geometric accuracy, we incorporate monocular depth and normal priors to provide constraints for details and textureless regions respectively. 
             Additionally, multi-view consistency constraints are employed to mitigate artifacts and further enhance reconstruction quality. 
@@ -395,10 +395,10 @@
     <p>
       If you find this project useful in your research, please consider cite:
     </p>
-    <pre><code>@article{xiang2024gaussianroom,
-      title={GaussianRoom: Improving 3D Gaussian Splatting with SDF Guidance and Monocular Cues for Indoor Scene Reconstruction},
-      author={Xiang, Haodong and Li, Xinghui and Lai, Xiansong and Zhang, Wanting and Liao, Zhichao and Cheng, Kai and Liu, Xueping},
-      journal={arXiv preprint arXiv:2405.19671},
+    <pre><code>@article{zhang20242dgs-room,
+      title={2DGS-Room: Seed-Guided 2D Gaussian Splatting with Geometric Constrains for High-Fidelity Indoor Scene Reconstruction},
+      author={Wanting Zhang, Haodong Xiang, Zhichao Liao, Xiansong Lai, Xinghui Li and Long Zeng},
+      journal={arXiv preprint arXiv:xxx},
       year={2024}
 }</code></pre>
   </div>
