--- a/index.html
+++ b/index.html
@@ -47,6 +47,28 @@
 <title>Video Carousel</title>
 <style>
   /* CSS 样式 */
+
+  .carousel {
+    display: flex;
+    transition: transform 0.5s ease;
+  }
+
+  .carousel .item {
+    flex: 0 0 auto;
+    transition: transform 0.5s ease, opacity 0.5s ease;
+    opacity: 0.5;  /* 默认不透明度 */
+  }
+
+  .carousel .item.active {
+    opacity: 1; /* 当前活跃视频完全显示 */
+    transform: scale(1.1); /* 中间的视频放大 */
+  }
+
+  .carousel .item.next, .carousel .item.prev {
+    opacity: 0.5; /* 下一张/上一张视频的透明度较低 */
+    transform: scale(0.9); /* 下一张/上一张视频缩小 */
+  }
+
   .video-container {
     display: flex;
     justify-content: center;
@@ -66,41 +88,7 @@
   }
   .active {
     display: block; /* 显示当前活动的视频 */
-  }
-
-
-  .carousel {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-  }
-
-  .item {
-    transition: transform 0.3s ease, transform 0.3s ease;
-  }
-
-  .video {
-    width: 80%; /* 视频默认宽度 */
-    height: auto;
-    opacity: 0.6; /* 非活动视频稍微透明 */
-    transition: transform 0.3s ease, opacity 0.3s ease;
-  }
-
-  .video.active {
-    width: 100%; /* 当前活跃视频最大 */
-    opacity: 1; /* 活跃视频不透明 */
-  }
-
-  /* 可以加上一些过渡效果 */
-  .carousel .item:not(.active) {
-    transform: scale(0.8); /* 非活动视频缩小 */
-  }
-
-  .carousel .item.active {
-    transform: scale(1); /* 活跃视频正常尺寸 */
-  }
-
+  } 
 
   .controls {
     position: absolute;
@@ -109,6 +97,7 @@
     transform: translateX(-50%);
     z-index: 1000;
   }
+
   .control-button {
     cursor: pointer;
     padding: 5px 10px;
@@ -321,12 +310,34 @@
   </div>
 </section>
 
+<script>
+  $(document).ready(function () {
+    let currentIndex = 0;
+    const videos = $('.carousel .item');
+    const totalVideos = videos.length;
 
-<!-- <section class="hero is-light is-small is-centered has-text-centered">
+    function updateCarousel() {
+      videos.removeClass('active next prev');
+      videos.eq(currentIndex).addClass('active');
+      videos.eq((currentIndex + 1) % totalVideos).addClass('next');
+      videos.eq((currentIndex - 1 + totalVideos) % totalVideos).addClass('prev');
+    }
+
+    setInterval(function () {
+      currentIndex = (currentIndex + 1) % totalVideos;
+      updateCarousel();
+    }, 5000);
+
+    updateCarousel();
+  });
+</script>
+
+
+<section class="hero is-light is-small is-centered has-text-centered">
   <h2 class="title is-3">Reconstruction Comparisons</h2>
   <div class="hero-body">
     <div class="video-container">
-      <div id="results-carousel" class="carousel results-carousel">
+      <div id="comparisons-carousel" class="carousel comparisons-carousel">
         <div class="item item-all-0050">
           <video poster="" id="all-0050" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/reconstruction_comparisons/all-0050.mp4"
@@ -366,49 +377,7 @@
       </div>
     </div>
   </div>
-</section> -->
-
-
-<section class="hero is-light is-small is-centered has-text-centered">
-  <h2 class="title is-3">Reconstruction Comparisons</h2>
-  <div class="hero-body">
-    <div class="video-container">
-      <div id="results-carousel" class="carousel results-carousel">
-        <div class="item item-all-0050">
-          <video class="video active" id="all-0050" autoplay controls muted loop playsinline>
-            <source src="./static/videos/reconstruction_comparisons/all-0050.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-all-0085">
-          <video class="video" id="all-0085" autoplay controls muted loop playsinline>
-            <source src="./static/videos/reconstruction_comparisons/all-0085.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-all-0580">
-          <video class="video" id="all-0580" autoplay controls muted loop playsinline>
-            <source src="./static/videos/reconstruction_comparisons/all-0580.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-all-0616">
-          <video class="video" id="all-0616" autoplay controls muted loop playsinline>
-            <source src="./static/videos/reconstruction_comparisons/all-0616.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-all-8b">
-          <video class="video" id="all-8b" autoplay controls muted loop playsinline>
-            <source src="./static/videos/reconstruction_comparisons/all-8b.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-all-8d">
-          <video class="video" id="all-8d" autoplay controls muted loop playsinline>
-            <source src="./static/videos/reconstruction_comparisons/all-8d.mp4" type="video/mp4">
-          </video>
-        </div>
-      </div>
-    </div>
-  </div>
 </section>
-
 
 <section class="section">
   <div class="container is-max-desktop">
