--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 <section class="hero is-light is-small is-centered has-text-centered">
   <h2 class="title is-3">Reconstruction Results</h2>
   <div class="hero-body">
-    <div class="video-container">
+    <div class="carousel-container">
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-gs-0050">
           <video poster="" id="gs-0050" autoplay controls muted loop playsinline width=100%>
@@ -256,7 +256,7 @@
 <section class="hero is-light is-small is-centered has-text-centered">
   <h2 class="title is-3">Reconstruction Comparisons</h2>
   <div class="hero-body">
-    <div class="video-container">
+    <div class="carousel-container">
       <div id="comparisons-carousel" class="carousel comparisons-carousel">
         <div class="item item-all-0050">
           <video poster="" id="all-0050" autoplay controls muted loop playsinline height="100%">
