--- a/index.html
+++ b/index.html
@@ -94,9 +94,11 @@
           <h1 class="title is-1 publication-title">2DGS-Room: Seed-Guided 2D Gaussian Splatting with Geometric Constrains for High-Fidelity Indoor Scene Reconstruction</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://Valentina-Zhang.github.io/">Wanting Zhang</a>,</span>
+              <!-- <a href="https://Valentina-Zhang.github.io/"> -->
+              Wanting Zhang</a>,</span>
             <span class="author-block">
-              <a href="https://github.com/xhd0612">Haodong Xiang</a>,</span>
+              <!-- <a href="https://github.com/xhd0612"> -->
+              Haodong Xiang</a>,</span>
             <span class="author-block">
               Zhichao Liao,</span>
             <span class="author-block">
