--- a/index.html
+++ b/index.html
@@ -301,19 +301,27 @@
   </div>
 </section>
 
-<section class="section">
+<!-- <section class="section">
   <div class="container is-max-desktop">
-    <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Rendering Comparisons</h2>
         <div class="content has-text-justified"> 
-          <img src="./static/images/x_render.png" alt="rendering" width="16000">
+          <img src="./static/images/x_render.png" alt="rendering" width=120%>
       </div>
     </div>
   </div>
-</section>
+</section> -->
   
+<section class="hero is-light is-small is-centered has-text-centered">
+  <h2 class="title is-3">Rendering Comparisons</h2>
+  <div class="hero-body">
+    <div class="wide-image-container">
+      <img src="./static/images/x_render.png" alt="Wide Image" class="wide-image">
+    </div>
+  </div>
+</section>
+
 
 <section class="section">
   <div class="container is-max-desktop">
