--- a/index.html
+++ b/index.html
@@ -146,17 +146,19 @@
 
 <!-- reconstruction_results -->
 
-<!-- <section class="hero teaser">
+<section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
       <img src="./static/images/teaser.png" alt="teaser" width="12000">
     </div>
   </div>
-</section> -->
+</section>
 
 
-
-<div class="columns is-centered has-text-centered">
+<section class="hero is-light is-small is-centered has-text-centered">
+  <h2 class="title is-3">Reconstruction Comparisons</h2>
+  <div class="hero-body">
+<!-- <div class="columns is-centered has-text-centered"> -->
   <div class="video-container">
     <!-- 第一个视频 -->
     <video class="video active" autoplay controls muted loop playsinline height="100%">
@@ -197,9 +199,10 @@
   <span class="dot" onclick="switchVideo(3)"></span>
   <span class="dot" onclick="switchVideo(4)"></span>
   <span class="dot" onclick="switchVideo(5)"></span>
-  <span class="dot" onclick="switchVideo(6)"></span>
   <!-- 添加更多导航点 -->
 </div>
+
+</section>
 
 <!-- JavaScript 代码 -->
 <script>
@@ -287,7 +290,7 @@
 </section>
 
 
-<section class="hero is-light is-small is-centered has-text-centered">
+<!-- <section class="hero is-light is-small is-centered has-text-centered">
   <h2 class="title is-3">Reconstruction Results</h2>
   <div class="hero-body">
     <div class="carousel-container">
@@ -332,7 +335,7 @@
     </div>
   </div>
 </section>
-
+ -->
 
 
 <section class="hero is-light is-small is-centered has-text-centered">
@@ -341,37 +344,37 @@
     <div class="carousel-container">
       <div id="comparisons-carousel" class="carousel comparisons-carousel">
         <div class="item item-all-0050">
-          <video poster="" id="all-0050" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="all-0050" autoplay controls muted loop playsinline width="100%">
             <source src="./static/videos/reconstruction_comparisons/all-0050.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-all-0085">
-          <video poster="" id="all-0085" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="all-0085" autoplay controls muted loop playsinline width="100%">
             <source src="./static/videos/reconstruction_comparisons/all-0085.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-all-0580">
-          <video poster="" id="all-0580" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="all-0580" autoplay controls muted loop playsinline width="100%">
             <source src="./static/videos/reconstruction_comparisons/all-0580.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-all-0616">
-          <video poster="" id="all-0616" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="all-0616" autoplay controls muted loop playsinline width="100%">
             <source src="./static/videos/reconstruction_comparisons/all-0616.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-all-8b">
-          <video poster="" id="all-8b" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="all-8b" autoplay controls muted loop playsinline width="100%">
             <source src="./static/videos/reconstruction_comparisons/all-8b.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-all-8d">
-          <video poster="" id="all-8d" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="all-8d" autoplay controls muted loop playsinline width="100%">
             <source src="./static/videos/reconstruction_comparisons/all-8d.mp4"
                     type="video/mp4">
           </video>
