--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 </section>
 
 
-<section class="hero is-light is-small is-centered has-text-centered">
+<section class="columns is-centered has-text-centered">
   <h2 class="title is-3">Reconstruction Comparisons</h2>
   <div class="hero-body">
 <!-- <div class="columns is-centered has-text-centered"> -->
