--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 </section>
 
 
-<!-- <section class="hero is-light is-small is-centered has-text-centered">
+<!-- <section class="hero is-small is-centered has-text-centered">
   <h2 class="title is-3">Reconstruction Results</h2>
   <div class="hero-body">
     <div class="carousel-container">
@@ -338,7 +338,7 @@
  -->
 
 
-<section class="hero is-light is-small is-centered has-text-centered">
+<section class="hero is-small is-centered has-text-centered">
   <h2 class="title is-3">Reconstruction Comparisons</h2>
   <div class="hero-body">
     <div class="carousel-container">
@@ -384,26 +384,26 @@
   </div>
 </section>
 
-<!-- <section class="section">
+<section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Rendering Comparisons</h2>
         <div class="content has-text-justified"> 
-          <img src="./static/images/x_render.png" alt="rendering" width=120%>
+          <img src="./static/images/x_render.png" alt="rendering" width=150%>
       </div>
     </div>
   </div>
-</section> -->
+</section>
   
-<section class="hero is-light is-small is-centered has-text-centered">
+<!-- <section class="hero is-light is-small is-centered has-text-centered">
   <h2 class="title is-3">Rendering Comparisons</h2>
   <div class="hero-body">
     <div class="wide-image-container">
       <img src="./static/images/x_render.png" alt="Wide Image" class="wide-image">
     </div>
   </div>
-</section>
+</section> -->
 
 
 <section class="section">
