--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 </section>
 
 
-<section class="hero is-light is-small is-centered has-text-centered">
+<section class="hero is-small is-centered has-text-centered">
   <h2 class="title is-3">Reconstruction Comparisons</h2>
   <div class="hero-body">
 <!-- <div class="columns is-centered has-text-centered"> -->
@@ -387,7 +387,6 @@
 <section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
         <h2 class="title is-3">Rendering Comparisons</h2>
         <div class="content has-text-justified"> 
           <img src="./static/images/x_render.png" alt="rendering" width=150%>
@@ -395,7 +394,7 @@
     </div>
   </div>
 </section>
-  
+
 <!-- <section class="hero is-light is-small is-centered has-text-centered">
   <h2 class="title is-3">Rendering Comparisons</h2>
   <div class="hero-body">
