--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
 
 <section class="hero is-small is-centered has-text-centered">
-  <h2 class="title is-3">Reconstruction Comparisons</h2>
+  <!-- <h2 class="title is-3">Reconstruction Results</h2> -->
   <div class="hero-body">
 <!-- <div class="columns is-centered has-text-centered"> -->
   <div class="video-container">
@@ -389,11 +389,12 @@
     <div class="columns is-centered has-text-centered">
         <h2 class="title is-3">Rendering Comparisons</h2>
         <div class="content has-text-justified"> 
-          <img src="./static/images/x_render.png" alt="rendering" width=150%>
+          <img src="./static/images/x_render.png" alt="rendering" width="18000">
       </div>
     </div>
   </div>
 </section>
+
 
 <!-- <section class="hero is-light is-small is-centered has-text-centered">
   <h2 class="title is-3">Rendering Comparisons</h2>
