--- a/index.html
+++ b/index.html
@@ -384,15 +384,15 @@
   </div>
 </section>
 
-<section class="section">
-  <div class="container is-max-desktop">
+<section class="hero teaser">
     <div class="columns is-centered has-text-centered">
-        <h2 class="title is-3">Rendering Comparisons</h2>
+      <h2 class="title is-3">Rendering Comparisons</h2>
+    </div>
+    <div class="container is-max-desktop">
         <div class="content has-text-justified"> 
           <img src="./static/images/x_render.png" alt="rendering" width="18000">
       </div>
     </div>
-  </div>
 </section>
 
 
