--- a/index.html
+++ b/index.html
@@ -338,10 +338,10 @@
  -->
 
 
-<section class="hero is-small is-centered has-text-centered">
+<section class="hero is-centered has-text-centered">
   <h2 class="title is-3">Reconstruction Comparisons</h2>
   <div class="hero-body">
-    <div class="video-container">
+    <div class="carousel-container">
       <div id="comparisons-carousel" class="carousel comparisons-carousel">
         <div class="item item-all-0050">
           <video poster="" id="all-0050" autoplay controls muted loop playsinline width="100%">
