--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   </div>
 </section>
 
-<section class="section">
+<!-- <section class="section">
   <div class="container is-max-desktop">
     <h2 class="title is-3" style="text-align: center;">Comparisons</h2>
       <div class="content">
@@ -173,7 +173,13 @@
             <div class="cmp-slider"></div>
         </div>
       </div>
-</section>
+</section> -->
+
+<div class="content has-text-centered">
+  <div class="columns is-centered has-text-centered"></div>
+  <video class="video" width="90%" id="ablation1" loop="" playsinline="" autoplay="" muted="" src="./static/videos/scene0050_00_2dgs.mp4" onplay="resizeAndPlay(this)"></video>
+  <canvas class="videoMerge" id="ablation1Merge"></canvas>
+</div>
 
 <section class="hero is-small is-centered has-text-centered">
   <!-- <h2 class="title is-3">Reconstruction Results</h2> -->
