--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@
         </div>
       </div>
 </section> -->
-
+<!-- 
 <div class="content has-text-centered">
   <div class="columns is-centered has-text-centered"></div>
   <video class="video" width="90%" id="ablation1" loop="" playsinline="" autoplay="" muted="" src="./static/videos/scene0050_00_2dgs.mp4" onplay="resizeAndPlay(this)"></video>
   <canvas class="videoMerge" id="ablation1Merge"></canvas>
-</div>
+</div> -->
 
 <section class="hero is-small is-centered has-text-centered">
   <!-- <h2 class="title is-3">Reconstruction Results</h2> -->
