--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
     display: block; /* 显示当前活动的视频 */
   } 
 
+  .rounded-corners {
+    border-radius: 10px; 
+  }
+
 </style>
 
 </head>
@@ -187,24 +191,24 @@
 <!-- <div class="columns is-centered has-text-centered"> -->
   <div class="video-container">
     <!-- 第一个视频 -->
-    <video class="video active" autoplay controls muted loop playsinline height="100%">
+    <video class="video rounded-corners active" autoplay controls muted loop playsinline height="100%">
       <source src="./static/videos/reconstruction_results/gs-0050.mp4" type="video/mp4">
     </video>
     <!-- 第二个视频 -->
-    <video class="video" autoplay controls muted loop playsinline height="100%">
+    <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
       <source src="./static/videos/reconstruction_results/gs-0085.mp4" type="video/mp4">
     </video>
     <!-- 第三个视频 -->
-    <video class="video" autoplay controls muted loop playsinline height="100%">
+    <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
       <source src="./static/videos/reconstruction_results/gs-0580.mp4" type="video/mp4">
     </video>
-    <video class="video" autoplay controls muted loop playsinline height="100%">
+    <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
       <source src="./static/videos/reconstruction_results/gs-0616.mp4" type="video/mp4">
     </video>
-    <video class="video" autoplay controls muted loop playsinline height="100%">
+    <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
       <source src="./static/videos/reconstruction_results/gs-8b.mp4" type="video/mp4">
     </video>
-    <video class="video" autoplay controls muted loop playsinline height="100%">
+    <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
       <source src="./static/videos/reconstruction_results/gs-8d.mp4" type="video/mp4">
     </video>
     <!-- 在此添加更多视频 -->
