--- a/index.html
+++ b/index.html
@@ -98,17 +98,15 @@
           <h1 class="title is-1 publication-title">2DGS-Room: Seed-Guided 2D Gaussian Splatting with Geometric Constrains for High-Fidelity Indoor Scene Reconstruction</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <!-- <a href="https://Valentina-Zhang.github.io/"> -->
-              Wanting Zhang</a>,</span>
+              <a href="https://scholar.google.com/citations?user=V6mBA5IAAAAJ">Wanting Zhang</a>,</span>
             <span class="author-block">
-              <!-- <a href="https://github.com/xhd0612"> -->
-              Haodong Xiang</a>,</span>
+              <a href="https://github.com/xhd0612">Haodong Xiang</a>,</span>
             <span class="author-block">
-              Zhichao Liao,</span>
+              <a href="https://scholar.google.com.hk/citations?user=4eRwbOEAAAAJ&hl=zh-CN">Zhichao Liao</a>,</span>
             <span class="author-block">
               Xiansong Lai,</span>
             <span class="author-block">
-              Xinghui Li,<sup>✉</sup></span>
+              <a href="https://github.com/Crayon-Shinchan">Xinghui Li</a>,<sup>✉</sup></span>
             <span class="author-block">
               <a href="https://www.sigs.tsinghua.edu.cn/cl/main.htm">Long Zeng</a><sup>✉</sup></span>
           </div>
@@ -190,15 +188,16 @@
   <div class="hero-body">
 <!-- <div class="columns is-centered has-text-centered"> -->
   <div class="video-container">
-    <!-- 第一个视频 -->
-    <video class="video rounded-corners active" autoplay controls muted loop playsinline height="100%">
+    
+    <video class="video" width="100%" id="teaser" loop playsinline autoplay muted src="./static/videos/scene0050_00.mp4" onplay="resizeAndPlay(this)" style="height: 0px;"></video>
+    <canvas height=0 class="videoMerge" id="teaserMerge"></canvas>
+
+    <!-- <video class="video rounded-corners active" autoplay controls muted loop playsinline height="100%">
       <source src="./static/videos/reconstruction_results/gs-0050.mp4" type="video/mp4">
     </video>
-    <!-- 第二个视频 -->
     <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
       <source src="./static/videos/reconstruction_results/gs-0085.mp4" type="video/mp4">
     </video>
-    <!-- 第三个视频 -->
     <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
       <source src="./static/videos/reconstruction_results/gs-0580.mp4" type="video/mp4">
     </video>
@@ -210,8 +209,7 @@
     </video>
     <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
       <source src="./static/videos/reconstruction_results/gs-8d.mp4" type="video/mp4">
-    </video>
-    <!-- 在此添加更多视频 -->
+    </video> -->
 
     <!-- 控制按钮 -->
     <div class="controls">
@@ -287,7 +285,7 @@
           <p>
             The reconstruction of indoor scenes remains challenging due to the inherent complexity of spatial structures and the prevalence of textureless regions. 
             Recent advancements in 3D Gaussian Splatting have improved novel view synthesis with accelerated processing but have yet to deliver comparable performance in surface reconstruction. 
-            In this paper, we introduce <strong>2DGS-Room</strong>, a novel method leveraging 2D Gaussian Splatting for high-fidelity indoor scene reconstruction. 
+            In this paper, we introduce <b>2DGS-Room</b>, a novel method leveraging 2D Gaussian Splatting for high-fidelity indoor scene reconstruction. 
             Specifically, we employ a seed-guided mechanism to control the distribution of 2D Gaussians, with the density of seed points dynamically optimized through adaptive growth and pruning mechanisms. 
             To further improve geometric accuracy, we incorporate monocular depth and normal priors to provide constraints for details and textureless regions respectively. 
             Additionally, multi-view consistency constraints are employed to mitigate artifacts and further enhance reconstruction quality. 
@@ -306,7 +304,7 @@
           <!-- <iframe src="./static/images/overview.pdf" width="600" height="400"></iframe> -->
             <img src="./static/images/overview.png" alt="overview" width="12000" height="600">
             <p>
-              <strong>Overview of 2DGS-Room.</strong> Given multi-view posed images, we improve 2DGS to achieve high-fidelity geometric reconstruction for indoor scenes.
+              <b>Overview of 2DGS-Room.</b> Given multi-view posed images, we improve 2DGS to achieve high-fidelity geometric reconstruction for indoor scenes.
               (a) Starting from an SfM-derived point cloud, we generate a set of seed points through voxelization, establishing a stable foundation for guiding the distribution and density of 2D Gaussians. 
               We further introduce an adaptive growth and pruning strategy to optimize seed points. 
               (b) We incorporate depth and normal priors, addressing the challenges of detailed areas and textureless regions. 
@@ -426,16 +424,6 @@
       </div>
     </div>
 </section>
-
-
-<!-- <section class="hero is-light is-small is-centered has-text-centered">
-  <h2 class="title is-3">Rendering Comparisons</h2>
-  <div class="hero-body">
-    <div class="wide-image-container">
-      <img src="./static/images/x_render.png" alt="Wide Image" class="wide-image">
-    </div>
-  </div>
-</section> -->
 
 
 <section class="section">
