--- a/index.html
+++ b/index.html
@@ -217,7 +217,6 @@
       <source src="./static/videos/reconstruction_results/gs-8d.mp4" type="video/mp4">
     </video>
 
-    <!-- 控制按钮 -->
     <div class="controls">
       <button class="control-button prev" onclick="prevVideo()">❮</button>
       <button class="control-button next" onclick="nextVideo()">❯</button>
@@ -225,18 +224,17 @@
   </div>
 </div> -->
 
-<!-- 导航点 -->
-<div class="nav-dots">
+
+<!-- <div class="nav-dots">
   <span class="dot" onclick="switchVideo(0)"></span>
   <span class="dot" onclick="switchVideo(1)"></span>
   <span class="dot" onclick="switchVideo(2)"></span>
   <span class="dot" onclick="switchVideo(3)"></span>
   <span class="dot" onclick="switchVideo(4)"></span>
   <span class="dot" onclick="switchVideo(5)"></span>
-  <!-- 添加更多导航点 -->
 </div>
 
-</section>
+</section> -->
 
 <!-- JavaScript 代码 -->
 <script>
