--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
         </div>
       </div>
 </section> -->
+
 <!-- 
 <div class="content has-text-centered">
   <div class="columns is-centered has-text-centered"></div>
@@ -183,22 +184,28 @@
   <canvas class="videoMerge" id="ablation1Merge"></canvas>
 </div> -->
 
-<div class="row">
+<!-- <div class="row">
   <div class="col-md-8 col-md-offset-2">
     <video class="video" width="100%" id="teaser" loop playsinline autoplay muted src="./static/videos/scene0050_00.mp4" onplay="resizeAndPlay(this)" style="height: 0px;"></video>
     <canvas height=0 class="videoMerge" id="teaserMerge"></canvas>
 </div>
-</div>
+</div> -->
 
 </section>
 
-<!-- 
+
 <section class="hero is-small is-centered has-text-centered">
   <h2 class="title is-3">Reconstruction Results</h2>
   <div class="hero-body">
   <div class="video-container">
   
     <video class="video rounded-corners active" autoplay controls muted loop playsinline height="100%">
+      <source src="./static/videos/scene0050_00.mp4" type="video/mp4">
+    </video>
+    <video class="video rounded-corners active" autoplay controls muted loop playsinline height="100%">
+      <source src="./static/videos/scene0050_00.mp4" type="video/mp4">
+    </video>
+    <!-- <video class="video rounded-corners active" autoplay controls muted loop playsinline height="100%">
       <source src="./static/videos/reconstruction_results/gs-0050.mp4" type="video/mp4">
     </video>
     <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
@@ -215,17 +222,17 @@
     </video>
     <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
       <source src="./static/videos/reconstruction_results/gs-8d.mp4" type="video/mp4">
-    </video>
+    </video> -->
 
     <div class="controls">
       <button class="control-button prev" onclick="prevVideo()">❮</button>
       <button class="control-button next" onclick="nextVideo()">❯</button>
     </div>
   </div>
-</div> -->
+</div>
 
 
-<!-- <div class="nav-dots">
+<div class="nav-dots">
   <span class="dot" onclick="switchVideo(0)"></span>
   <span class="dot" onclick="switchVideo(1)"></span>
   <span class="dot" onclick="switchVideo(2)"></span>
@@ -234,7 +241,7 @@
   <span class="dot" onclick="switchVideo(5)"></span>
 </div>
 
-</section> -->
+</section>
 
 <!-- JavaScript 代码 -->
 <script>
