--- a/index.html
+++ b/index.html
@@ -184,28 +184,25 @@
   <canvas class="videoMerge" id="ablation1Merge"></canvas>
 </div> -->
 
-<!-- <div class="row">
+<div class="row">
   <div class="col-md-8 col-md-offset-2">
-    <video class="video" width="100%" id="teaser" loop playsinline autoplay muted src="./static/videos/scene0050_00.mp4" onplay="resizeAndPlay(this)" style="height: 0px;"></video>
-    <canvas height=0 class="videoMerge" id="teaserMerge"></canvas>
+    <!-- 设置视频的高度为适当值，或者根据容器调整 -->
+    <video class="video" width="100%" id="teaser" loop playsinline autoplay muted src="./static/videos/scene0050_00.mp4" onplay="resizeAndPlay(this)" style="height: 400px;"></video>
+    <!-- 画布同样要设置合适的高度 -->
+    <canvas height="400" class="videoMerge" id="teaserMerge"></canvas>
+  </div>
 </div>
-</div> -->
+
 
 </section>
 
 
-<section class="hero is-small is-centered has-text-centered">
+<!-- <section class="hero is-small is-centered has-text-centered">
   <h2 class="title is-3">Reconstruction Results</h2>
   <div class="hero-body">
   <div class="video-container">
   
     <video class="video rounded-corners active" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/scene0050_00.mp4" type="video/mp4">
-    </video>
-    <video class="video rounded-corners active" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/scene0050_00.mp4" type="video/mp4">
-    </video>
-    <!-- <video class="video rounded-corners active" autoplay controls muted loop playsinline height="100%">
       <source src="./static/videos/reconstruction_results/gs-0050.mp4" type="video/mp4">
     </video>
     <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
@@ -222,14 +219,14 @@
     </video>
     <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
       <source src="./static/videos/reconstruction_results/gs-8d.mp4" type="video/mp4">
-    </video> -->
+    </video>
 
     <div class="controls">
       <button class="control-button prev" onclick="prevVideo()">❮</button>
       <button class="control-button next" onclick="nextVideo()">❯</button>
     </div>
   </div>
-</div>
+</div> -->
 
 
 <div class="nav-dots">
